[package]
name = "jerasure-sys"
license = "MIT"
description = "FFI bindings to the jerasure and gf-complete library"
repository = "https://github.com/LokyinZHAO/jerasure-sys"
readme = "README.md"
categories = ["api-bindings", "External FFI bindings"]
keywords = ["jerasure", "gf-complete", "ffi", "bindings"]
authors = ["Lokyin ZHAO <lokyinzhao.work@icloud.com>"]
version = "0.2.0"
edition = "2024"
exclude = ["vendor/gf-complete/manual/*", "vendor/jerasure/Manual.pdf"]

[build-dependencies]
autotools = "0.2.7"
bindgen = "0.71.1"

[features]
default = ["bundle"]
# The bundle feature enables building the dependencies from source. Set by default.
bundle = ["link_static"]
# The link_static feature enables linking the dependencies statically.
link_static = []
